--- a/Ch15_equations.tex
+++ b/Ch15_equations.tex
@@ -116,10 +116,11 @@ $$T(u,v) = (x,y)$$
 The inverse transformation $T^{-1}$ converts $(x, y) \to (u, v)$. 
 
 \subsection*{The Jacobian}
-To actually calculate the integral, we have to convert $dA = \mathbf{J} \, du \, dv$,
+To actually calculate the integral, we have to convert $dA = \mathbf{J}(u,v) \, du \, dv$,
 where the \textbf{Jacobian} is defined as
 
 \begin{equation}
+	\mathbf{J}(u,v) = 
 	\frac{\partial (x,y)}{\partial (u,v)} = 
 	\begin{vmatrix}
 		\dfrac{\partial x}{\partial u}& \dfrac{\partial x}{\partial v}\\[1em]
@@ -132,7 +133,7 @@ where the \textbf{Jacobian} is defined as
 To integrate a region $S$ in the uv-plane from a region $R$ in the xy-plane, 
 \begin{equation}
 	\iint \limits_R f(x,y) \, dA = \iint \limits_S f(x(u,v), y(u,v)) \,
-	\mathbf{J} \, du \, dv
+	\mathbf{J}(u,v) \, du \, dv
 \end{equation}
 
 \end{document}
