--- a/Ch15_equations.tex
+++ b/Ch15_equations.tex
@@ -12,7 +12,7 @@
 \section{Double Integrals Over Rectangles}
 \subsection*{Iterated Integrals}
 \paragraph{Fubini's Theorem} 
-allows us to switch the order of integration. For $a \le x \le b, c \le y \le d$,
+Allows us to switch the order of integration. For $a \le x \le b, c \le y \le d$,
 \begin{equation}
 	\iint \limits_R f(x,y) \, dA = 
 	\int_a^b \int_c^d f(x,y) \, dy \, dx =
@@ -76,7 +76,7 @@ $r$ and $\theta$ are the polar coordinates and $z$ is the height.
 	r^2 = x^2 + y^2 \qquad \tan{\theta} = \frac{y}{x}
 \end{equation}
 \begin{equation}
-	\iiint \limits_E f(x, y, z) \, dV = \int_{\theta_1}^{\theta_2} \! \int_{f_1}^{f_2} \! \int_{z_1}^{z_2}
+	\iiint \limits_E f(x, y, z) \, dV = \int_{\theta_1}^{\theta_2} \! \int_{r_1}^{r_2} \! \int_{z_1}^{z_2}
 	f(r \cos{\theta}, r\sin{\theta}, z) \, r \, dz \, dr \, d\theta
 \end{equation}
 
